syntax = "proto3";

package register;

option go_package = "./register";

message RegReq {
    string username = 1;
    string password = 2;
    CatchaReq captcha = 3;
    string phone = 4;
    string promotion = 5;
    string code = 6;
    string country = 7;
    string superPartner = 8;
    string ip = 9;
}

message CatchaReq {
    string server = 1;
    string token = 2;
}

message RegResp {}

message NoResp {}

message CodeReq{
    string phone = 1;
    string country = 2;
}

service Register {
    rpc registerByPhone(RegReq) returns (RegResp);
    rpc sendCode(CodeReq) returns (NoResp);
}